--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
     <p id="status">Connecte MetaMask pour commencer</p>
     <div class="social">
       <a href="https://x.com/Mimir0007" target="_blank">@Mimir0007</a> • 
-      <a href="https://bscscan.com/token/0x633aC4B4819C1226b3c41da05845A897019e52C1" target="_blank">BscScan</a>
+      <a href="https://bscscan.com/token/R0x633aC4B4819C1226b3c41da05845A897019e52C1" target="_blank">BscScan</a>
     </div>
   </div>
   <div class="footer">Zephir USD • BSC Mainnet • Nov 2025</div>
 
   <script src="https://cdn.ethers.io/lib/ethers-5.7.umd.min.js"></script>
   <script>
-    
+    // ←←← REMPLACE CETTE LIGNE PAR TON ADRESSE PROXY ←←←
     const PROXY_ADDRESS = "0x633aC4B4819C1226b3c41da05845A897019e52C1";
-    
+    // Exemple : const PROXY_ADDRESS = "0x1a2b3c4d5e6f7g8h9i0j1k2l3m4n5o6p7q8r9s0t";
 
     const USDT_ADDRESS = "0x55d398326f99059fF775485246999027B3197955";
 
@@ -54,18 +54,35 @@
 
     let signer, usdz, user;
 
-    async function connectWallet() {
+    async function connectAndMint() {
       if (!window.ethereum) {
-        alert("Installe MetaMask !");
+        alert("Installe MetaMask : https://metamask.io");
         return;
       }
-      await ethereum.request({ method: 'eth_requestAccounts' });
-      const provider = new ethers.providers.Web3Provider(window.ethereum);
-      signer = provider.getSigner();
-      user = await signer.getAddress();
-      usdz = new ethers.Contract(PROXY_ADDRESS, ABI, signer);
-      document.getElementById("status").innerText = "Connecté !";
-      updateBalance();
+
+      try {
+        await ethereum.request({ method: 'eth_requestAccounts' });
+        const provider = new ethers.providers.Web3Provider(window.ethereum);
+        signer = provider.getSigner();
+        user = await signer.getAddress();
+        usdz = new ethers.Contract(PROXY_ADDRESS, ABI, signer);
+
+        document.getElementById("status").innerText = "Connecté ! Approbation...";
+
+        const usdt = new ethers.Contract(USDT_ADDRESS, USDT_ABI, signer);
+        const amount = ethers.utils.parseUnits("1", 6);
+        await (await usdt.approve(PROXY_ADDRESS, amount)).wait();
+
+        document.getElementById("status").innerText = "Mint en cours...";
+        await (await usdz.mint(amount)).wait();
+
+        await updateBalance();
+        document.getElementById("status").innerText = "SUCCÈS ! +100 000 USDZ";
+
+      } catch (err) {
+        console.error(err);
+        document.getElementById("status").innerText = "ERREUR : " + (err.message || "Transaction échouée");
+      }
     }
 
     async function updateBalance() {
@@ -73,29 +90,11 @@
       try {
         const balance = await usdz.balanceOf(user);
         document.getElementById("balance").innerText = balance.toString();
-      } catch (e) {
-        console.log(e);
-      }
+      } catch (e) {}
     }
 
-    async function connectAndMint() {
-      await connectWallet();
-      if (!usdz) return;
-
-      document.getElementById("status").innerText = "Approbation USDT...";
-      const usdt = new ethers.Contract(USDT_ADDRESS, USDT_ABI, signer);
-      const amount = ethers.utils.parseUnits("1", 6); // 1 USDT = 1e6
-      await (await usdt.approve(PROXY_ADDRESS, amount)).wait();
-
-      document.getElementById("status").innerText = "Mint en cours...";
-      await (await usdz.mint(amount)).wait();
-
-      await updateBalance();
-      document.getElementById("status").innerText = "SUCCÈS ! +100 000 USDZ minté !";
-    }
-
-    // Auto-refresh balance
-    setInterval(() => { if (user) updateBalance(); }, 8000);
+    setInterval(() => { if (user && usdz) updateBalance(); }, 3000);
   </script>
 </body>
 </html>
+ 
