--- a/index.html
+++ b/index.html
@@ -29,65 +29,55 @@
     <h1>Zephir USD</h1>
     <p class="tagline">1 USDT = 100 000 USDZ • Peg 1:1 USD</p>
     <div class="balance">Solde : <span id="balance">0</span> USDZ</div>
-    <button onclick="connectAndMint()">Mint 100k USDZ</button>
-    <p id="status">Connecte MetaMask pour commencer</p>
+    <button onclick="mint()">Mint 100k USDZ</button>
+    <p id="status">Connecte MetaMask</p>
     <div class="social">
       <a href="https://x.com/Mimir0007" target="_blank">@Mimir0007</a> • 
-      <a href="https://bscscan.com/token/0x633aC4B4819C1226b3c41da05845A897019e52C1" target="_blank">BscScan</a>
+      <a href="https://bscscan.com/token/PROXY_ICI" target="_blank">BscScan</a>
     </div>
   </div>
-  <div class="footer">Zephir USD • BSC Mainnet • Nov 2025</div>
+  <div class="footer">Zephir USD • BSC Mainnet • 2025</div>
 
-  <script src="https://cdn.ethers.io/lib/ethers-5.7.umd.min.js"></script>
+  <script src="https://unpkg.com/ethers@5.7.2/dist/ethers.umd.min.js"></script>
   <script>
-    const PROXY_ADDRESS = "0x633aC4B4819C1226b3c41da05845A897019e52C1";
-    const USDT_ADDRESS = "0x55d398326f99059fF775485246999027B3197955";
-
-    const ABI = [
-      "function mint(uint256)",
-      "function balanceOf(address) view returns (uint256)"
-    ];
+    const PROXY = "0xTON_PROXY_ICI";
+    const USDT = "0x55d398326f99059fF775485246999027B3197955";
+    const ABI = ["function mint(uint256)"];
     const USDT_ABI = ["function approve(address,uint256)"];
 
-    let signer, usdz, user;
+    let usdz, user;
 
-    async function connectAndMint() {
-      if (!window.ethereum) return alert("Installe MetaMask : https://metamask.io");
-
+    async function mint() {
+      if (!window.ethereum) return alert("MetaMask requis");
       try {
         await ethereum.request({ method: 'eth_requestAccounts' });
         const provider = new ethers.providers.Web3Provider(window.ethereum);
-        signer = provider.getSigner();
+        const signer = provider.getSigner();
         user = await signer.getAddress();
-        usdz = new ethers.Contract(PROXY_ADDRESS, ABI, signer);
+        usdz = new ethers.Contract(PROXY, ABI, signer);
 
-        document.getElementById("status").innerText = "Connecté ! Approbation...";
+        document.getElementById("status").innerText = "Approbation...";
+        const usdt = new ethers.Contract(USDT, USDT_ABI, signer);
+        const amount = ethers.utils.parseUnits("1", 18);
+        await (await usdt.approve(PROXY, amount)).wait();
 
-        const usdt = new ethers.Contract(USDT_ADDRESS, USDT_ABI, signer);
-        const amount = ethers.utils.parseUnits("1", 18); // USDT BSC = 18 décimales
-        await (await usdt.approve(PROXY_ADDRESS, amount)).wait();
-
-        document.getElementById("status").innerText = "Mint en cours...";
+        document.getElementById("status").innerText = "Mint...";
         await (await usdz.mint(amount)).wait();
 
-        await updateBalance();
+        await update();
         document.getElementById("status").innerText = "SUCCÈS ! +100 000 USDZ";
-
-      } catch (err) {
-        console.error(err);
-        document.getElementById("status").innerText = "ERREUR : " + (err.message || "Échec");
+      } catch (e) {
+        document.getElementById("status").innerText = "ERREUR : " + e.message;
       }
     }
 
-    async function updateBalance() {
+    async function update() {
       if (!usdz || !user) return;
-      try {
-        const balance = await usdz.balanceOf(user);
-        document.getElementById("balance").innerText = balance.toString();
-      } catch (e) {}
+      const bal = await usdz.balanceOf(user);
+      document.getElementById("balance").innerText = bal.toString();
     }
 
-    setInterval(() => { if (user && usdz) updateBalance(); }, 3000);
+    setInterval(update, 3000);
   </script>
 </body>
 </html>
