--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <p id="status">Connecte MetaMask</p>
     <div class="social">
       <a href="https://x.com/Mimir0007" target="_blank">@Mimir0007</a> • 
-      <a href="https://bscscan.com/token/PROXY_ICI" target="_blank">BscScan</a>
+      <a href="https://bscscan.com/token/0x633aC4B4819C1226b3c41da05845A897019e52C1" target="_blank">BscScan</a>
     </div>
   </div>
   <div class="footer">Zephir USD • BSC Mainnet • 2025</div>
 
   <script src="https://unpkg.com/ethers@5.7.2/dist/ethers.umd.min.js"></script>
   <script>
-    const PROXY = "0xTON_PROXY_ICI";
+    const PROXY = "0x633aC4B4819C1226b3c41da05845A897019e52C1";
     const USDT = "0x55d398326f99059fF775485246999027B3197955";
     const ABI = ["function mint(uint256)"];
     const USDT_ABI = ["function approve(address,uint256)"];
